--- a/day06/quiz/index.css
+++ b/day06/quiz/index.css
@@ -1,5 +1,9 @@
-.recruit {
+.box {
   text-align: center;
+  margin-top: 20px;
+}
+
+.recruit {
   font-size: 22px;
   font-weight: bold;
   position: relative;
@@ -14,15 +18,22 @@
   right: -20px;
   top: 4px;
   transform: rotate(30deg);
+  transition: all 0.5s;
 }
 
-/* .recruit::after {
+.recruit::after {
   content: " ";
   width: 5px;
   height: 20px;
   background-color: #e5c046;
   position: absolute;
-  right: -10px;
+  left: -20px;
   top: 4px;
-  transform: rotate(-45deg);
-} */
+  transform: rotate(-30deg);
+  transition: all 0.5s;
+}
+
+.recruit:hover::before,
+.recruit:hover::after {
+  transform: rotate(0deg);
+}
